--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <img class="img" src="/taj.jpg" alt="" />
       <div class="content">
-        <p>Taj Mahal-Beauty of INDIA</p>
+        <p>Taj Mahal--Beauty of INDIA</p>
         <button class="btn">Click Me</button>
       </div>
     </div>
