--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <img class="img" src="/taj.jpg" alt="" />
       <div class="content">
         <p>Taj Mahal--Beauty of INDIA</p>
-        <button class="btn">Click Me</button>
+        <button class="btn">Hello Everyone</button>
       </div>
     </div>
   </body>
